added keyboard toggle

--- a/crt-runner/index.html
+++ b/crt-runner/index.html
@@ -12,9 +12,12 @@
       <div class="quality-label">Quality</div>
       <div class="quality-buttons">
         <button type="button" data-quality="low" aria-pressed="false">Low</button>
-        <button type="button" data-quality="medium" aria-pressed="false">Medium</button>
+        <button type="button" data-quality="medium" aria-pressed="false">Mid</button>
         <button type="button" data-quality="high" aria-pressed="false">High</button>
       </div>
+      <button type="button" id="keyboard-toggle" class="quality-toggle" aria-pressed="false">
+        Keyboard Off
+      </button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
